--- a/theme/locales/en.json
+++ b/theme/locales/en.json
@@ -82,5 +82,6 @@
   "products_details_algo": "Supported Algorithms",
   "products_details_size": "Size",
   "products_details_weight": "Weight",
-  "products_details_process_node": "Process Node"
+  "products_details_process_node": "Process Node",
+  "products_details_second_m_name": "Also Known as"
 }
